--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
       <div class="navbar">
         <div class="logo">
-          <img src="image/IMG_1655.jpg" width="200px">
+          <img src="" width="200px">
            
         </div>
         <nav>
